fix(user-block): fix fields wrapping in horizontal mode

--- a/packages/lumx-core/src/scss/components/user-block/_index.scss
+++ b/packages/lumx-core/src/scss/components/user-block/_index.scss
@@ -73,16 +73,9 @@
             display: none;
         }
 
-        #{$self}--size-m & {
-            display: flex;
-        }
-
-        #{$self}--size-l & {
+        #{$self}--orientation-vertical & {
             display: flex;
             flex-direction: column;
-        }
-
-        #{$self}--orientation-vertical & {
             align-items: center;
         }
     }
